--- a/index.html
+++ b/index.html
@@ -3,31 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi página personal</title>
+    <title>Mi pagina personal</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!--Encabezado-->
+ 
     <header>
         <h1>Pablo E. Carr H.</h1>
     </header>
-    <!--Seccion bibliografia-->
+
     <section>
-        <button onclick="mostrarMensaje()">Bienvenidos!!!</button>
+        <button onclick="mostrarMensaje()">¡Bienvenidos!</button>
         <h2>Biografía</h2>
-        <p>Investigador y especialista en educación y política educativa, con rigurosa formación científica y metodológica, capaz de realizar investigación y hacer aportes originales que contribuyan a fortalecer la calidad de la educación superior y en los distintos niveles del sistema educativo nacional. Aplicación de conocimientos prácticos y académicos para el análisis en el área de sistemas y manejo de información, aplicando análisis, diseño y construcción de soluciones informáticas, analista de operaciones, desarrollador de procesos, excelentes relaciones interpersonales, liderazgo, disponibilidad de adquirir nuevos conocimientos y capacidad de brindar soluciones a las diferentes situaciones que se presenten en el giro normal de las actividades de la empresa, desarrollando así el ingenio, la creatividad y la seguridad. Adaptabilidad a los cambios y comprensión de situaciones teniendo en cuenta la decisión y el riesgo, persistencia en la solución de problemas, iniciativa y responsabilidad personal en el alcance de los objetivos trazados, con capacidad de trabajo innovador, sentido ético, integridad y fiabilidad.</p>
+        <p>Desde que empecé a aprender programación básica, me ha fascinado cómo funciona la tecnología. Estoy trabajando con Python y JavaScript, y he hecho proyectos pequeños como juegos y scripts de automatización. Aunque enfrento desafíos, siempre los supero con dedicación. Me gusta participar en comunidades para compartir y aprender. Mi objetivo es desarrollar herramientas útiles y, más adelante, crear aplicaciones web o móviles. En mi tiempo libre, leo ciencia ficción, hago senderismo y experimento en la cocina.</p>
     </section>
-    <!--Lista de habilidades-->
+ 
     <section>
         <h2>Habilidades Técnicas</h2>
         <ul>
-            <li>HTML5, CSS3, JavaScript</li>
-            <li>React, Angular, Laravel</li>
-            <li>Nodejs, Express</li>
-            <li>MongoDB, MySQL, SQL</li>
+            <li>HTML, CSS, JavaScript</li>
         </ul>
     </section>
-    <!--Formulario de contacto-->
     <section>
         <h2>Contacto</h2>
         <form action="">
@@ -39,9 +35,9 @@
             <button type="submit">Enviar</button>
         </form>
     </section>
-    <!--Pie de pagina-->
+    
     <footer>
-        <p>Contáctame: &copy - <a href="mailto:pablocarr@gmail.com">Pablo E. Carr H.</a></p>
+        <p>Contáctame: &copy - <a href="mailto:valentinamolic@gmail.com">Valentina Molina.</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
